--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,3 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes scroll-left {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.slide-left {
+  animation-name: scroll-left;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+  animation-fill-mode: forwards;
+}
